# FinancialManager

.devcontainer/: devcontainer.json
Financial/: FILES_PER_DEPLOY.md  GUIDA_MIGRAZIONE_DATI.md  ISTRUZIONI_LOGO.md  README.md  README_DEPLOY.md  app.py  app_logo.py  clear_db.py  config.py  init_data.py  logo_base64.py  package-lock.json  package.json  pyproject.toml  remove_background.py  replit.nix  requirements.txt
Financial/components/: dashboard.py  inline_edit_form.py  login.py  product_form.py  product_list.py  update_liquid_form.py  user_management.py
Financial/data/: products.csv
Financial/pages/: _app.js
Financial/utils/: auth.py  data_manager.py  financial.py  plotting.py
